--- a/themes/navy/source/css/_partial/archive.styl
+++ b/themes/navy/source/css/_partial/archive.styl
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    background: url(../brand2.png) center #000;
+    background: url(../brand.png) center #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
