--- a/themes/navy/source/css/_variables.styl
+++ b/themes/navy/source/css/_variables.styl
@@ -6,7 +6,7 @@ vendor-prefixes = webkit moz ms official
 color-default = #444
 color-gray = #999
 color-border = #e3e3e3
-color-navy = #505c67
+color-navy = #191d34
 color-link = #0e83cd
 color-link-hover = lighten(color-link, 10%)
 
