--- a/themes/navy/source/css/_partial/index.styl
+++ b/themes/navy/source/css/_partial/index.styl
@@ -6,8 +6,14 @@
   padding-top: 20px
   font-size: 40px
   line-height: 1.15
-  font-weight: 300
+  //font-weight: 300
   font-family: font-title
+  /* Added by Alan */
+  color: white;
+  letter-spacing: 0.6px;
+  font-weight: 400;
+  text-shadow: 2px 2px 0px rgba(0,0,0,0.122), 3px 3px 0 rgba(0,0,0,0.078), 4px 1px 0 rgba(0,0,0,0.102), 1px 3px 0 rgba(0,0,0,0.122);
+  /* ------------- */
   @media mq-normal
     padding-top: 100px
     font-size: 50px
