--- a/themes/navy/source/css/_partial/archive.styl
+++ b/themes/navy/source/css/_partial/archive.styl
@@ -1,4 +1,4 @@
-.brand {
+.brand
     position: relative;
     top: 0;
     left: 0;
@@ -8,7 +8,7 @@
     -moz-background-size: cover;
     background-size: cover;
     z-index: -1;
-}
+
 
 .archive-post
   padding: 1em 0
