add brand inner dark mask

--- a/themes/navy/source/css/_partial/archive.styl
+++ b/themes/navy/source/css/_partial/archive.styl
@@ -10,6 +10,10 @@
     z-index: -1;
 }
 
+.brand_inner {
+    background: rgba(46, 45, 45, 0.4);
+}
+
 .archive-post
   padding: 1em 0
   border-top: 1px solid color-border
