add brand inner dark mask

--- a/themes/navy/source/css/_partial/archive.styl
+++ b/themes/navy/source/css/_partial/archive.styl
@@ -9,6 +9,8 @@
     background-size: cover;
     z-index: -1;
 
+.brand_inner
+    background: rgba(21, 20, 20, 0.4);
 
 .archive-post
   padding: 1em 0
